# trend-news-generator

./: .env.example  .gitignore  0001-docs-Research-Agent-short-article-report.patch  10-research-agent.md  CLAUDE.md  README.md  commit.sh  deploy.sh  followAccounts.ts  getResponse.ts  package-lock.json  package.json  research-agent-implementation.md
pipeline/: .dockerignore  .env.example  .gcloudignore  Dockerfile  pyproject.toml
pipeline/app/: config.py  main.py  models.py  normalize.py
pipeline/app/chat/: __init__.py  api.py  graph.py  prompts.py  schemas.py  stream_llm.py
pipeline/app/collectors/: base.py  enrich.py  gemini_grounded.py  ieee_xplore.py  rss.py
pipeline/app/generators/: daily.py  longform.py  openai_client.py  prompts.py  short.py
pipeline/app/jobs/: cleanup_drafts.py  collect.py  generate_article.py  generate_daily.py  generate_monthly.py  generate_report.py  generate_short.py  generate_weekly.py  longform_runner.py  refresh_threads_token.py  seed.py
pipeline/app/publishers/: base.py  notion.py  renderer.py  threads.py  x.py
pipeline/app/repo/: __init__.py  chat.py  client.py  configs.py  items.py  posts.py  research.py  runs.py
pipeline/scripts/: drill_inspect.py  migrate_cadence_to_format.py
pipeline/tests/: conftest.py  test_academic_sources.py  test_api.py  test_delete_post.py  test_format_migration.py  test_keywords_cleanup.py  test_normalize.py  test_notion_blocks.py  test_oauth1.py  test_publish_orchestration.py  test_renderer.py  test_rss.py
pipeline/trend_news_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+180 files in other folders)
