[project]
name = "trend-news-pipeline"
version = "0.1.0"
description = "Trend collection, generation and publishing pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "google-cloud-firestore>=2.16",
    "google-cloud-storage>=2.17",
    "google-cloud-secret-manager>=2.20",
    "google-auth>=2.29",
    "openai>=1.40",
    "google-genai>=1.0",
    "feedparser>=6.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "trafilatura>=1.8",  # research: HTML main-text extraction (R4)
    "pypdf>=4.0",        # research: PDF text extraction (R4)
    # Upper-bounded on purpose (unlike the rest): we depend on 0.x SDK internals
    # (wrappers.wrap_openai, Client.flush), so a major bump needs re-probing.
    "langsmith>=0.10,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
